--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,5 +5,5 @@ spring:
   datasource:
     username: "root"
     password: ""
-    url: "jdbc:mysql://127.0.0.1:3306/test"
+    url: "jdbc:mysql://127.0.0.1:3306/sport_plus"
     driver-class: com.mysql.jdbc.Driver
